Fix: close Patchwork condition boundaries