@@ -1,11 +1,17 @@
 package com.alechilles.patchwork.discovery;
 
 import java.io.IOException;
+import java.nio.channels.SeekableByteChannel;
+import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.LinkOption;
-import java.nio.file.Path;
 import java.nio.file.NoSuchFileException;
+import java.nio.file.Path;
+import java.nio.file.SecureDirectoryStream;
+import java.nio.file.StandardOpenOption;
 import java.nio.file.attribute.BasicFileAttributes;
+import java.nio.file.attribute.DosFileAttributes;
+import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
@@ -14,48 +20,127 @@ import java.util.zip.ZipFile;
 
 /** Resolves winning, non-generated target assets from filesystem-backed packs. */
 public final class PatchTargetResolver {
+    private final ReadHook readHook;
+
+    public PatchTargetResolver() {
+        this(path -> { });
+    }
+
+    PatchTargetResolver(ReadHook readHook) {
+        this.readHook = readHook;
+    }
+
     /** Resolves a target to the highest-priority available source and copies its bytes before archive closure. */
     public Optional<ResolvedTarget> resolve(List<PatchSource> sources, String target) {
         return resolveDetailed(sources, target).target();
     }
+
     /** Resolves with missing-vs-failure status for callers that must not hide unsafe reads. */
     public Resolution resolveDetailed(List<PatchSource> sources, String target) {
         final String normalized;
-        try { normalized = PatchScanner.normalizeAssetPath(target); } catch (IllegalArgumentException exception) { return new Resolution(Status.FAILED, null, "Unsafe asset path."); }
+        try { normalized = PatchScanner.normalizeAssetPath(target); }
+        catch (IllegalArgumentException exception) { return new Resolution(Status.FAILED, null, "Unsafe asset path."); }
         for (PatchSource source : sources.stream().filter(s -> !PatchScanner.GENERATED_PACK_ID.equals(s.sourcePackId())).sorted(Comparator.comparingInt(PatchSource::sourcePackLoadOrder).thenComparing(PatchSource::sourcePackId).reversed()).toList()) {
-            try { byte[] bytes = source.kind() == PatchSource.Kind.DIRECTORY ? readDirectory(source.backingPath(), normalized) : readArchive(source.backingPath(), normalized); if (bytes != null) return new Resolution(Status.FOUND, new ResolvedTarget(source.sourcePackId(), source.sourcePackLoadOrder(), normalized, bytes), ""); }
-            catch (IOException exception) { return new Resolution(Status.FAILED, null, "Unable to read asset source."); }
+            try {
+                byte[] bytes = source.kind() == PatchSource.Kind.DIRECTORY ? readDirectory(source.backingPath(), normalized) : readArchive(source.backingPath(), normalized);
+                if (bytes != null) return new Resolution(Status.FOUND, new ResolvedTarget(source.sourcePackId(), source.sourcePackLoadOrder(), normalized, bytes), "");
+            } catch (IOException exception) {
+                return new Resolution(Status.FAILED, null, "Unable to read asset source.");
+            }
         }
         return new Resolution(Status.MISSING, null, "Asset source is missing.");
     }
 
-    private static Optional<ResolvedTarget> read(PatchSource source, String target) {
-        try {
-            byte[] bytes = source.kind() == PatchSource.Kind.DIRECTORY ? readDirectory(source.backingPath(), target) : readArchive(source.backingPath(), target);
-            return bytes == null ? Optional.empty() : Optional.of(new ResolvedTarget(source.sourcePackId(), source.sourcePackLoadOrder(), target, bytes));
-        } catch (IOException exception) { return Optional.empty(); }
-    }
-
-    private static byte[] readDirectory(Path root, String target) throws IOException {
+    private byte[] readDirectory(Path root, String target) throws IOException {
         Path file = root.resolve(target).normalize();
         if (!file.startsWith(root)) throw new IOException("unsafe target path");
+        SourceAttributes rootAttributes;
+        try { rootAttributes = SourceAttributes.read(root); }
+        catch (NoSuchFileException missing) { return null; }
+        if (!rootAttributes.safeDirectory()) throw new IOException("unsafe source root");
+        try (DirectoryStream<Path> stream = Files.newDirectoryStream(root)) {
+            if (stream instanceof SecureDirectoryStream<Path> secure) return secureRead(root, target, secure);
+        }
+        return fallbackRead(root, target);
+    }
+
+    /** Uses full pre/post component snapshots because this provider cannot retain descriptor-relative directory handles. */
+    private byte[] fallbackRead(Path root, String target) throws IOException {
+        String[] parts = target.split("/");
+        List<ComponentSnapshot> before = new ArrayList<>();
+        Path current = root;
+        before.add(new ComponentSnapshot(current, SourceAttributes.read(current)));
+        for (int i = 0; i < parts.length; i++) {
+            current = current.resolve(parts[i]);
+            SourceAttributes attributes;
+            try { attributes = SourceAttributes.read(current); }
+            catch (NoSuchFileException missing) { return null; }
+            if (!attributes.safeComponent(i == parts.length - 1)) throw new IOException("unsafe asset component");
+            before.add(new ComponentSnapshot(current, attributes));
+        }
+        Path realRoot = root.toRealPath(LinkOption.NOFOLLOW_LINKS);
+        Path realFile = current.toRealPath(LinkOption.NOFOLLOW_LINKS);
+        if (!realFile.startsWith(realRoot)) throw new IOException("asset escaped source root");
+        readHook.beforeRead(current);
+        byte[] bytes;
+        try (SeekableByteChannel channel = Files.newByteChannel(current, java.util.Set.of(StandardOpenOption.READ, LinkOption.NOFOLLOW_LINKS))) {
+            bytes = java.nio.channels.Channels.newInputStream(channel).readAllBytes();
+        } catch (NoSuchFileException disappeared) {
+            throw new IOException("asset disappeared after validation", disappeared);
+        }
+        validateFallbackPostRead(before, realRoot, realFile);
+        return bytes;
+    }
+
+    private static void validateFallbackPostRead(List<ComponentSnapshot> before, Path realRoot, Path realFile) throws IOException {
+        for (int i = 0; i < before.size(); i++) {
+            ComponentSnapshot snapshot = before.get(i);
+            SourceAttributes after;
+            try { after = SourceAttributes.read(snapshot.path()); }
+            catch (NoSuchFileException disappeared) { throw new IOException("asset disappeared after validation", disappeared); }
+            if (!after.safeComponent(i == before.size() - 1) || !snapshot.attributes().sameAs(after)) throw new IOException("asset component changed during read");
+        }
+        Path afterRealRoot;
+        Path afterRealFile;
         try {
-            BasicFileAttributes rootAttributes = Files.readAttributes(root, BasicFileAttributes.class, LinkOption.NOFOLLOW_LINKS);
-            if (!rootAttributes.isDirectory() || rootAttributes.isOther() || Files.isSymbolicLink(root)) throw new IOException("unsafe source root");
-            Path current = root;
-            for (Path part : root.relativize(file)) {
-                current = current.resolve(part);
-                BasicFileAttributes attributes = Files.readAttributes(current, BasicFileAttributes.class, LinkOption.NOFOLLOW_LINKS);
-                if (attributes.isOther() || Files.isSymbolicLink(current)) throw new IOException("unsafe asset component");
+            afterRealRoot = before.getFirst().path().toRealPath(LinkOption.NOFOLLOW_LINKS);
+            afterRealFile = before.getLast().path().toRealPath(LinkOption.NOFOLLOW_LINKS);
+        } catch (NoSuchFileException disappeared) {
+            throw new IOException("asset disappeared after validation", disappeared);
+        }
+        if (!afterRealFile.startsWith(afterRealRoot) || !afterRealRoot.equals(realRoot) || !afterRealFile.equals(realFile)) throw new IOException("asset escaped or changed source root");
+    }
+
+    /** Secure providers keep directory descriptors open and never fall back to path-based child resolution. */
+    private byte[] secureRead(Path root, String target, SecureDirectoryStream<Path> rootStream) throws IOException {
+        String[] parts = target.split("/");
+        List<SecureDirectoryStream<Path>> handles = new ArrayList<>();
+        handles.add(rootStream);
+        try {
+            SecureDirectoryStream<Path> current = rootStream;
+            for (int i = 0; i < parts.length - 1; i++) {
+                Path part = root.getFileSystem().getPath(parts[i]);
+                BasicFileAttributes attributes;
+                try { attributes = current.getFileAttributeView(part, java.nio.file.attribute.BasicFileAttributeView.class, LinkOption.NOFOLLOW_LINKS).readAttributes(); }
+                catch (NoSuchFileException missing) { return null; }
+                if (!attributes.isDirectory() || attributes.isOther()) throw new IOException("unsafe asset component");
+                try { current = current.newDirectoryStream(part, LinkOption.NOFOLLOW_LINKS); }
+                catch (NoSuchFileException disappeared) { throw new IOException("asset disappeared after validation", disappeared); }
+                handles.add(current);
             }
-            BasicFileAttributes finalAttributes = Files.readAttributes(file, BasicFileAttributes.class, LinkOption.NOFOLLOW_LINKS);
+            Path finalPart = root.getFileSystem().getPath(parts[parts.length - 1]);
+            BasicFileAttributes finalAttributes;
+            try { finalAttributes = current.getFileAttributeView(finalPart, java.nio.file.attribute.BasicFileAttributeView.class, LinkOption.NOFOLLOW_LINKS).readAttributes(); }
+            catch (NoSuchFileException missing) { return null; }
             if (!finalAttributes.isRegularFile() || finalAttributes.isOther()) throw new IOException("unsafe asset final file");
-            Path realRoot = root.toRealPath(LinkOption.NOFOLLOW_LINKS);
-            Path realFile = file.toRealPath(LinkOption.NOFOLLOW_LINKS);
-            if (!realFile.startsWith(realRoot)) throw new IOException("asset escaped source root");
-            return Files.readAllBytes(file);
-        } catch (NoSuchFileException missing) {
-            return null;
+            readHook.beforeRead(root.resolve(target));
+            try (SeekableByteChannel channel = current.newByteChannel(finalPart, java.util.Set.of(StandardOpenOption.READ, LinkOption.NOFOLLOW_LINKS))) {
+                return java.nio.channels.Channels.newInputStream(channel).readAllBytes();
+            } catch (NoSuchFileException disappeared) {
+                throw new IOException("asset disappeared after validation", disappeared);
+            }
+        } finally {
+            for (int i = handles.size() - 1; i > 0; i--) handles.get(i).close();
         }
     }
 
@@ -74,8 +159,39 @@ public final class PatchTargetResolver {
         public ResolvedTarget { bytes = bytes.clone(); }
         @Override public byte[] bytes() { return bytes.clone(); }
     }
+
     /** Detailed resolution status without sensitive filesystem details. */
-    public record Resolution(Status status, ResolvedTarget resolvedTarget, String diagnostic) { public Optional<ResolvedTarget> target() { return Optional.ofNullable(resolvedTarget); } }
+    public record Resolution(Status status, ResolvedTarget resolvedTarget, String diagnostic) {
+        public Optional<ResolvedTarget> target() { return Optional.ofNullable(resolvedTarget); }
+    }
+
     /** Detailed resolution outcome. */
     public enum Status { FOUND, MISSING, FAILED }
+
+    @FunctionalInterface interface ReadHook { void beforeRead(Path file) throws IOException; }
+
+    private record ComponentSnapshot(Path path, SourceAttributes attributes) { }
+
+    /** Basic and available DOS attributes captured with no link following for fallback verification. */
+    private record SourceAttributes(boolean directory, boolean regular, boolean other, boolean symbolicLink, long size, java.nio.file.attribute.FileTime created, java.nio.file.attribute.FileTime modified, Object fileKey, boolean hidden, boolean system) {
+        static SourceAttributes read(Path path) throws IOException {
+            BasicFileAttributes basic = Files.readAttributes(path, BasicFileAttributes.class, LinkOption.NOFOLLOW_LINKS);
+            try {
+                DosFileAttributes dos = Files.readAttributes(path, DosFileAttributes.class, LinkOption.NOFOLLOW_LINKS);
+                return new SourceAttributes(basic.isDirectory(), basic.isRegularFile(), basic.isOther(), Files.isSymbolicLink(path), basic.size(), basic.creationTime(), basic.lastModifiedTime(), basic.fileKey(), dos.isHidden(), dos.isSystem());
+            } catch (UnsupportedOperationException ignored) {
+                return new SourceAttributes(basic.isDirectory(), basic.isRegularFile(), basic.isOther(), Files.isSymbolicLink(path), basic.size(), basic.creationTime(), basic.lastModifiedTime(), basic.fileKey(), false, false);
+            }
+        }
+
+        boolean safeDirectory() { return directory && !other && !symbolicLink; }
+
+        boolean safeComponent(boolean finalComponent) {
+            return !other && !symbolicLink && (finalComponent ? regular : directory);
+        }
+
+        boolean sameAs(SourceAttributes other) {
+            return directory == other.directory && regular == other.regular && this.other == other.other && symbolicLink == other.symbolicLink && size == other.size && created.equals(other.created) && modified.equals(other.modified) && (fileKey == null || other.fileKey == null || fileKey.equals(other.fileKey)) && hidden == other.hidden && system == other.system;
+        }
+    }
 }
